Fix overflow issue

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -37,11 +37,13 @@ body {
   &__section {
     @include main-section-grid;
     &__hero {
+      overflow: hidden;
       @include main-section-hero-grid;
       &__image {
         min-width: 110%;
         transform: translateX(-1.5625rem);
         @include tablet {
+          min-width: 100%;
           transform: translateX(0);
         }
         &--left {
